# tracks_downloader

./: .cache  .env.example  .gitignore  CLAUDE.md  README.md  README_TELETHON.md  catalog.db  pyproject.toml  requirements.txt  run.py  spotify_downloader.py  telegram_monitor.py  telethon_downloader.py
docs/superpowers/plans/: 2026-04-01-refactor-and-catalog-improvements.md
docs/superpowers/specs/: 2026-04-01-refactor-and-catalog-improvements-design.md
src/: __init__.py  catalog.py  constants.py  downloader.py  file_manager.py  link_converter.py  main.py  missing_tracks.py  progress_tracker.py  spotify_api.py  telegram_client.py  utils.py
