[project]
name = "spotify-downloader"
version = "3.0.0"
description = "Automate downloading DJ tracks from Spotify playlists via Telegram bot"
requires-python = ">=3.12"
dependencies = [
    "spotipy>=2.23.0",
    "telethon>=1.34.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "colorama>=0.4.6",
    "tqdm>=4.66.1",
    "cryptg>=0.4.0",
    "fuzzywuzzy>=0.18.0",
    "python-levenshtein>=0.21.1",
    "mutagen>=1.47.0",
]

[project.scripts]
spotify-dl = "run:main"
